examples/test/testpolicy19717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19717
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key16: value38
      key37: value44
      key29: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value47
          key0: value24
          key44: value17
      podSelector:
        matchLabels:
          key49: value24
          key8: value32
          key23: value26
